# quality-assurance

./: .gitignore  CLAUDE.md  README.md  config.toml  config.toml.example  pyproject.toml
docs/: CODE_REVIEW.md
docs/design-plans/: 2026-03-09-scdm-qa.md  2026-03-10-cross-table-code-checks.md  2026-03-10-l1-l2-checks.md  2026-03-10-qa-dashboard.md  2026-03-16-GH-6.md  2026-03-16-GH-8.md
docs/implementation-plans/2026-03-09-scdm-qa/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  test-requirements.md
docs/implementation-plans/2026-03-10-cross-table-code-checks/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  (+3 more)
docs/test-plans/: 2026-03-09-scdm-qa.md  2026-03-10-cross-table-code-checks.md  2026-03-10-l1-l2-checks.md  2026-03-10-qa-dashboard.md  2026-03-16-GH-6.md  2026-03-16-GH-7.md  2026-03-16-GH-8.md
src/scdm_qa/: __init__.py  cli.py  config.py  logging.py  pipeline.py
tests/: conftest.py  test_accumulator.py  test_accumulator_protocol.py  test_cli.py  test_code_check_validation.py  test_code_checks.py  test_config.py  test_conversion.py  test_cross_table_checks.py  test_cross_table_engine.py  test_custom_rules.py  test_dashboard.py  test_duckdb_utils.py  test_global_checks.py  test_l1_checks.py  test_l1_l2_integration.py  test_logging.py  test_parser.py  test_pipeline_phases.py  test_profiling.py  test_readers.py  test_reporting.py  test_runner.py  test_sas_streaming_integration.py  test_serialise.py  test_table_validator.py  test_validation.py  test_validation_chunk_accumulator.py
(+74 files in other folders)
